# virtual-overlay

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  fix_corruption.ps1  install.ps1  uninstall.ps1
.github/agents/: copilot-instructions.md
.github/workflows/: build.yml  update-scoop.yml
installer/: License.rtf  Package.wxs  Product.wxs  README.md  UI.wxs
res/: app.manifest  app.rc
scoop/: README.md  virtual-overlay.json
specs/001-virtual-overlay/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-virtual-overlay/checklists/: requirements.md
specs/001-virtual-overlay/contracts/: README.md
specs/001-virtual-overlay/research/: virtual-desktop-com-api.md
src/: App.cpp  App.h  main.cpp
src/config/: Config.cpp  Config.h  Defaults.h
src/desktop/: VirtualDesktop.cpp  VirtualDesktop.h  VirtualDesktopInterop.h
src/input/: GestureHandler.cpp  GestureHandler.h  GlobalHooks.cpp  GlobalHooks.h  InputHandler.cpp  InputHandler.h
src/overlay/: AcrylicHelper.cpp  AcrylicHelper.h  OverlayConfig.h  OverlayWindow.cpp  OverlayWindow.h
src/settings/: SettingsPages.cpp  SettingsPages.h  SettingsWindow.cpp  SettingsWindow.h
src/tray/: TrayIcon.cpp  TrayIcon.h
src/utils/: Animation.cpp  Animation.h  D2DRenderer.cpp  D2DRenderer.h  Logger.cpp  Logger.h  Monitor.cpp  Monitor.h
src/zoom/: Magnifier.cpp  Magnifier.h  ZoomConfig.h  ZoomController.cpp  ZoomController.h
tests/: performance-testing.md  test-plan.md
